// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correct with attributes: data-scheme 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid;
  border-color: transparent;
  background: transparent;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  height: 32px;
  border-radius: 4px;
  font-size: 14px;
  padding-inline: 12px;
  background: #313131;
  color: #edeef0;
}

.emotion-0:hover {
  background: #313131;
  color: #FFF;
}

.emotion-0:active {
  background: #484848;
  color: #FFF;
}

.emotion-0:not([loading])[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled],
.emotion-0[loading] {
  background: #222222;
  color: #111111;
}

<div>
  <button
    class="brb-button emotion-0"
    data-scheme="gray"
    data-testid="btn"
    data-variant="contained"
    type="button"
  >
    gray
  </button>
</div>
`;

exports[`renders correct with attributes: data-scheme 2`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid;
  border-color: transparent;
  background: transparent;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  height: 32px;
  border-radius: 4px;
  font-size: 14px;
  padding-inline: 12px;
  background: #2e3135;
  color: #edeef0;
}

.emotion-0:hover {
  background: #2e3135;
  color: #FFF;
}

.emotion-0:active {
  background: #43484e;
  color: #FFF;
}

.emotion-0:not([loading])[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled],
.emotion-0[loading] {
  background: #212225;
  color: #111113;
}

<div>
  <button
    class="brb-button emotion-0"
    data-scheme="slate"
    data-testid="btn"
    data-variant="contained"
    type="button"
  >
    slate
  </button>
</div>
`;

exports[`renders correct with attributes: data-variant 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid;
  border-color: transparent;
  background: transparent;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  height: 32px;
  border-radius: 4px;
  font-size: 14px;
  padding-inline: 12px;
  background: #2e3135;
  color: #edeef0;
}

.emotion-0:hover {
  background: #2e3135;
  color: #FFF;
}

.emotion-0:active {
  background: #43484e;
  color: #FFF;
}

.emotion-0:not([loading])[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled],
.emotion-0[loading] {
  background: #212225;
  color: #111113;
}

<div>
  <button
    class="brb-button emotion-0"
    data-scheme="slate"
    data-testid="btn"
    data-variant="contained"
    type="button"
  >
    contained
  </button>
</div>
`;

exports[`renders correct with attributes: data-variant 2`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid;
  border-color: transparent;
  background: transparent;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  height: 32px;
  border-radius: 4px;
  font-size: 14px;
  padding-inline: 12px;
  border-color: #2e3135;
  color: #2e3135;
}

.emotion-0:hover {
  border-color: #2e3135;
  color: #2e3135;
  background: #191919;
}

.emotion-0:active {
  border-color: #43484e;
  color: #43484e;
  background: #222222;
}

.emotion-0:not([loading])[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled],
.emotion-0[loading] {
  border-color: #212225;
  background: #111111;
  color: #212225;
}

<div>
  <button
    class="brb-button emotion-0"
    data-scheme="slate"
    data-testid="btn"
    data-variant="outlined"
    type="button"
  >
    outlined
  </button>
</div>
`;

exports[`renders correct with attributes: data-variant 3`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid;
  border-color: transparent;
  background: transparent;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  height: 32px;
  border-radius: 4px;
  font-size: 14px;
  padding-inline: 12px;
  color: #2e3135;
}

.emotion-0:hover {
  color: #2e3135;
}

.emotion-0:active {
  color: #43484e;
}

.emotion-0:not([loading])[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled],
.emotion-0[loading] {
  color: #212225;
}

<div>
  <button
    class="brb-button emotion-0"
    data-scheme="slate"
    data-testid="btn"
    data-variant="text"
    type="button"
  >
    outlined
  </button>
</div>
`;

exports[`renders correct with icon in props 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid;
  border-color: transparent;
  background: transparent;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  height: 32px;
  border-radius: 4px;
  font-size: 14px;
  padding-inline: 12px;
  background: #2e3135;
  color: #edeef0;
}

.emotion-0:hover {
  background: #2e3135;
  color: #FFF;
}

.emotion-0:active {
  background: #43484e;
  color: #FFF;
}

.emotion-0:not([loading])[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled],
.emotion-0[loading] {
  background: #212225;
  color: #111113;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: inherit;
  -webkit-margin-start: 6px;
  margin-inline-start: 6px;
}

<div>
  <button
    class="brb-button emotion-0"
    data-scheme="slate"
    data-variant="contained"
    type="button"
  >
    Loading
    <span
      class="brb-icon emotion-1"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders correct with icon no children 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid;
  border-color: transparent;
  background: transparent;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  height: 32px;
  border-radius: 4px;
  font-size: 14px;
  width: 32px;
  background: #2e3135;
  color: #edeef0;
}

.emotion-0:hover {
  background: #2e3135;
  color: #FFF;
}

.emotion-0:active {
  background: #43484e;
  color: #FFF;
}

.emotion-0:not([loading])[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled],
.emotion-0[loading] {
  background: #212225;
  color: #111113;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: inherit;
}

<div>
  <button
    class="brb-button emotion-0"
    data-scheme="slate"
    data-variant="contained"
    type="button"
  >
    <span
      class="brb-icon emotion-1"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders correct with loading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid;
  border-color: transparent;
  background: transparent;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  height: 32px;
  border-radius: 4px;
  font-size: 14px;
  padding-inline: 12px;
  background: #2e3135;
  color: #edeef0;
}

.emotion-0:hover {
  background: #2e3135;
  color: #FFF;
}

.emotion-0:active {
  background: #43484e;
  color: #FFF;
}

.emotion-0:not([loading])[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled],
.emotion-0[loading] {
  background: #212225;
  color: #111113;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: inherit;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 1.5s;
  animation-duration: 1.5s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-margin-start: 6px;
  margin-inline-start: 6px;
}

<div>
  <button
    class="brb-button emotion-0"
    data-scheme="slate"
    data-testid="btn"
    data-variant="contained"
    disabled=""
    loading=""
    type="button"
  >
    Loading
    <span
      class="brb-icon emotion-1"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </button>
</div>
`;
